<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:elevation="3dp"
    card_view:cardCornerRadius="@dimen/_10sdp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/str_how_was_your_experience"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_close" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/llImprovement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/improvement_new" />


                <TextView
                    style="@style/acmeFont"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/could_use_imrove"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSatisfactory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/satisfactory_new" />


                <TextView
                    style="@style/acmeFont"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/satisfactory"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llExcellent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/excellent_new" />


                <TextView
                    style="@style/acmeFont"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/excellent"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNeedMoreTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_need_more_time_in_the_room"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>