<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="5.5">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/colorWhite"
                        android:elevation="@dimen/_10sdp"
                        android:orientation="vertical" />


                    <LinearLayout
                        android:id="@+id/llList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:elevation="@dimen/_10sdp"
                        android:orientation="vertical" />

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ListView
                                android:id="@+id/lvUsers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/llList"
                                android:nestedScrollingEnabled="false" />
                        </LinearLayout>
                    </android.support.v4.widget.NestedScrollView>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <!-- <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">




                     <android.support.v4.widget.NestedScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">





                     </android.support.v4.widget.NestedScrollView>


                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>-->


            <include layout="@layout/rainbo_layout" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/_5sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">

                        <!-- <ImageView
                             android:layout_width="@dimen/_15sdp"
                             android:layout_height="@dimen/_15sdp"
                             android:src="@drawable/sunset"
                             android:tint="@color/colorWhite" />-->

                        <TextView
                            android:id="@+id/tvSunset"
                            style="@style/acmeFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_8sdp"
                            android:textStyle="bold"
                            tools:text="7 PM" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <!--  <ImageView
                              android:layout_width="@dimen/_12sdp"
                              android:layout_height="@dimen/_12sdp"
                              android:src="@drawable/sunset"
                              android:tint="@color/red" />-->

                        <TextView
                            android:id="@+id/tvSunset1"
                            style="@style/acmeFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_8sdp"
                            android:textStyle="bold"
                            tools:text="7 PM" />

                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/lang"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="0.9"
                    android:background="@drawable/language_button"
                    android:onClick="lang"
                    android:padding="@dimen/_5sdp"
                    android:shadowColor="#A8A8A8"
                    android:text="@string/language"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_10sdp" />


                <include layout="@layout/music_layout_include" />

                <RelativeLayout
                    android:id="@+id/rl_music"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ivVolumeDown"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/beck_volume_down"
                        android:elevation="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_volume_down" />


                    <SeekBar
                        android:id="@+id/seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_toStartOf="@+id/ivVolumeUp"
                        android:layout_toEndOf="@+id/ivVolumeDown"
                        android:max="100"
                        android:min="0"
                        android:padding="@dimen/_10sdp" />


                    <ImageView
                        android:id="@+id/ivVolumeUp"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_alignEnd="@+id/ivVolumeDown"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start"
                        android:layout_marginEnd="0dp"
                        android:background="@drawable/beck_volume_up"
                        android:elevation="@dimen/_10sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_volume_up" />

                </RelativeLayout>


                <Button
                    android:id="@+id/button"
                    style="@style/acmeFont"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="1.5"
                    android:background="@drawable/buttonshape3"
                    android:gravity="center"
                    android:onClick="help"
                    android:shadowColor="#A8A8A8"
                    android:text="@string/help"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/acmeFont"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:onClick="ready"
                    android:padding="@dimen/_8sdp"
                    android:shadowColor="#A8A8A8"

                    android:enabled="false"
                    android:alpha="0.5"

                    android:text="@string/ready"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_14sdp" />


                <Button
                    android:id="@+id/button3"
                    style="@style/acmeFont"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1.5"
                    android:background="@drawable/buttonshape2"
                    android:gravity="center"
                    android:onClick="done"
                    android:shadowColor="#A8A8A8"

                    android:enabled="false"
                    android:alpha="0.5"

                    android:text="@string/done"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/mPinView"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_10sdp"
                        android:onClick="music"
                        android:scaleType="fitCenter"
                        android:src="@drawable/setting_button" />

                    <Button
                        android:id="@+id/donate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/light_background"
                        android:onClick="donate"
                        android:padding="@dimen/_5sdp"
                        android:shadowColor="#A8A8A8"
                        android:text="@string/donate"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:indicatorColor="@color/colorPrimaryDark"
        app:indicatorName="BallSpinFadeLoaderIndicator" />

</RelativeLayout>